# sjtu_rm2019_winter_version

./: CMakeLists.txt  main.cpp
extra_files/camera_calibration_parameter/: extrinsics.yml  intrinsics.yml
include/armor_finder/: armor_finder.h  constant.h  param_struct_define.h
include/camera/: camera_wrapper.h  video_wrapper.h  wrapper_head.h
include/predictor/: predictor_curve_fitting.h
include/tools/: calibrate_tool.h
include/uart/: uart.h
src/: armor_finder.cpp  find_light_blob.cpp  match_light_blob.cpp  show_images.cpp
src/armor_finder/: armor_finder.cpp  armor_finder_main_stream.cpp  send_target_by_uart.cpp  show_images.cpp
src/armor_finder/IspPipline/: isp_pipline.cpp
src/armor_finder/calibrate_source/: calibrate.cpp
src/armor_finder/send_target_by_uart/: send_target_by_uart.cpp
src/armor_finder/state_machine/: searching_target.cpp  tracking_target.cpp  transfer_state.cpp
src/armor_finder/target_detection/: find_light_blob.cpp  match_armor_boxes.cpp  match_light_blob.cpp  recognize_digits.cpp
src/armor_finder/target_position/: convert_to_3d_coordinate.cpp  predict_armor_position.cpp  target_stream_control.cpp
src/armor_finder/target_send_data/: send_target_by_uart.cpp
src/camera/: camera_wrapper.cpp  video_wrapper.cpp
src/predictor/: predictor_curve_fitting.cpp
src/tools/: calibrate_tool.cpp
src/uart/: uart.cpp
tools/: calibrate_tool.cpp
